// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Albums /> renders 2006 albums 1`] = `
<div
  className="Albums"
>
  <PageHeader
    bsClass="page-header"
  >
    Albums 
    <small>
      (
      1
       
       
      Album
       from 2006
      )
    </small>
  </PageHeader>
  <div
    className="filters"
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        onClick={[Function]}
      >
        <a>
          All
        </a>
      </li>
      <li
        key="A"
        onClick={[Function]}
      >
        <a>
          A
        </a>
      </li>
      <li
        key="B"
        onClick={[Function]}
      >
        <a>
          B
        </a>
      </li>
      <li
        key="C"
        onClick={[Function]}
      >
        <a>
          C
        </a>
      </li>
      <li
        key="D"
        onClick={[Function]}
      >
        <a>
          D
        </a>
      </li>
      <li
        key="E"
        onClick={[Function]}
      >
        <a>
          E
        </a>
      </li>
      <li
        key="F"
        onClick={[Function]}
      >
        <a>
          F
        </a>
      </li>
      <li
        key="G"
        onClick={[Function]}
      >
        <a>
          G
        </a>
      </li>
      <li
        key="H"
        onClick={[Function]}
      >
        <a>
          H
        </a>
      </li>
      <li
        key="I"
        onClick={[Function]}
      >
        <a>
          I
        </a>
      </li>
      <li
        key="J"
        onClick={[Function]}
      >
        <a>
          J
        </a>
      </li>
      <li
        key="K"
        onClick={[Function]}
      >
        <a>
          K
        </a>
      </li>
      <li
        key="L"
        onClick={[Function]}
      >
        <a>
          L
        </a>
      </li>
      <li
        key="M"
        onClick={[Function]}
      >
        <a>
          M
        </a>
      </li>
      <li
        key="N"
        onClick={[Function]}
      >
        <a>
          N
        </a>
      </li>
      <li
        key="O"
        onClick={[Function]}
      >
        <a>
          O
        </a>
      </li>
      <li
        key="P"
        onClick={[Function]}
      >
        <a>
          P
        </a>
      </li>
      <li
        key="Q"
        onClick={[Function]}
      >
        <a>
          Q
        </a>
      </li>
      <li
        key="R"
        onClick={[Function]}
      >
        <a>
          R
        </a>
      </li>
      <li
        key="S"
        onClick={[Function]}
      >
        <a>
          S
        </a>
      </li>
      <li
        key="T"
        onClick={[Function]}
      >
        <a>
          T
        </a>
      </li>
      <li
        key="U"
        onClick={[Function]}
      >
        <a>
          U
        </a>
      </li>
      <li
        key="V"
        onClick={[Function]}
      >
        <a>
          V
        </a>
      </li>
      <li
        key="W"
        onClick={[Function]}
      >
        <a>
          W
        </a>
      </li>
      <li
        key="X"
        onClick={[Function]}
      >
        <a>
          X
        </a>
      </li>
      <li
        key="Y"
        onClick={[Function]}
      >
        <a>
          Y
        </a>
      </li>
      <li
        key="Z"
        onClick={[Function]}
      >
        <a>
          Z
        </a>
      </li>
    </ul>
  </div>
  <Col
    bsClass="col"
    componentClass="div"
    key="1"
    md={6}
  >
    <div
      className="Album"
    >
      <h2>
        <Link
          replace={false}
          to="/artist/jkl_artist/album/jkl"
        >
          JKL
        </Link>
      </h2>
      <h3>
        by 
        <Link
          replace={false}
          to="/artist/jkl_artist"
        >
          JKL-Artist
        </Link>
         
        <small>
          (
          11
           
          Tracks
          )
        </small>
      </h3>
      <div
        className="icon"
      >
        <a
          onClick={[Function]}
        >
          <FontAwesome
            name="calendar"
          />
           
          2006
        </a>
        <a
          onClick={[Function]}
        >
          <FontAwesome
            className="spacer-left-xs"
            name="tag"
          />
           
          Rock
        </a>
        <FontAwesome
          className="spacer-left-xs"
          name="comment-o"
        />
         
        23
      </div>
      <Link
        replace={false}
        to="/artist/jkl_artist/album/jkl"
      >
        <img
          alt="JKL"
          className="img-responsive"
          src="http://localhost:3000/uploads/album/cover/1/small_jkl--jkl.jpg"
        />
      </Link>
      <ul>
        <li
          key="0"
        >
          1. First
        </li>
        <li
          key="1"
        >
          2. Second
        </li>
        <li
          key="2"
        >
          3. Third
        </li>
        <li
          key="3"
        >
          4. Fourth
        </li>
        <li
          key="4"
        >
          5. Fifth
        </li>
      </ul>
    </div>
  </Col>
</div>
`;

exports[`<Albums /> renders A albums 1`] = `
<div
  className="Albums"
>
  <PageHeader
    bsClass="page-header"
  >
    Albums 
    <small>
      (
      1
       
       
      Album
      )
    </small>
  </PageHeader>
  <div
    className="filters"
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        onClick={[Function]}
      >
        <a>
          All
        </a>
      </li>
      <li
        className="active"
        key="A"
        onClick={[Function]}
      >
        <a>
          A
        </a>
      </li>
      <li
        key="B"
        onClick={[Function]}
      >
        <a>
          B
        </a>
      </li>
      <li
        key="C"
        onClick={[Function]}
      >
        <a>
          C
        </a>
      </li>
      <li
        key="D"
        onClick={[Function]}
      >
        <a>
          D
        </a>
      </li>
      <li
        key="E"
        onClick={[Function]}
      >
        <a>
          E
        </a>
      </li>
      <li
        key="F"
        onClick={[Function]}
      >
        <a>
          F
        </a>
      </li>
      <li
        key="G"
        onClick={[Function]}
      >
        <a>
          G
        </a>
      </li>
      <li
        key="H"
        onClick={[Function]}
      >
        <a>
          H
        </a>
      </li>
      <li
        key="I"
        onClick={[Function]}
      >
        <a>
          I
        </a>
      </li>
      <li
        key="J"
        onClick={[Function]}
      >
        <a>
          J
        </a>
      </li>
      <li
        key="K"
        onClick={[Function]}
      >
        <a>
          K
        </a>
      </li>
      <li
        key="L"
        onClick={[Function]}
      >
        <a>
          L
        </a>
      </li>
      <li
        key="M"
        onClick={[Function]}
      >
        <a>
          M
        </a>
      </li>
      <li
        key="N"
        onClick={[Function]}
      >
        <a>
          N
        </a>
      </li>
      <li
        key="O"
        onClick={[Function]}
      >
        <a>
          O
        </a>
      </li>
      <li
        key="P"
        onClick={[Function]}
      >
        <a>
          P
        </a>
      </li>
      <li
        key="Q"
        onClick={[Function]}
      >
        <a>
          Q
        </a>
      </li>
      <li
        key="R"
        onClick={[Function]}
      >
        <a>
          R
        </a>
      </li>
      <li
        key="S"
        onClick={[Function]}
      >
        <a>
          S
        </a>
      </li>
      <li
        key="T"
        onClick={[Function]}
      >
        <a>
          T
        </a>
      </li>
      <li
        key="U"
        onClick={[Function]}
      >
        <a>
          U
        </a>
      </li>
      <li
        key="V"
        onClick={[Function]}
      >
        <a>
          V
        </a>
      </li>
      <li
        key="W"
        onClick={[Function]}
      >
        <a>
          W
        </a>
      </li>
      <li
        key="X"
        onClick={[Function]}
      >
        <a>
          X
        </a>
      </li>
      <li
        key="Y"
        onClick={[Function]}
      >
        <a>
          Y
        </a>
      </li>
      <li
        key="Z"
        onClick={[Function]}
      >
        <a>
          Z
        </a>
      </li>
    </ul>
  </div>
  <Col
    bsClass="col"
    componentClass="div"
    key="1"
    md={6}
  >
    <div
      className="Album"
    >
      <h2>
        <Link
          replace={false}
          to="/artist/abc_artist/album/abc"
        >
          ABC
        </Link>
      </h2>
      <h3>
        by 
        <Link
          replace={false}
          to="/artist/abc_artist"
        >
          ABC-Artist
        </Link>
         
        <small>
          (
          15
           
          Tracks
          )
        </small>
      </h3>
      <div
        className="icon"
      >
        <a
          onClick={[Function]}
        >
          <FontAwesome
            name="calendar"
          />
           
          2008
        </a>
        <a
          onClick={[Function]}
        >
          <FontAwesome
            className="spacer-left-xs"
            name="tag"
          />
           
          Rock
        </a>
        <FontAwesome
          className="spacer-left-xs"
          name="comment-o"
        />
         
        42
      </div>
      <Link
        replace={false}
        to="/artist/abc_artist/album/abc"
      >
        <img
          alt="ABC"
          className="img-responsive"
          src="http://localhost:3000/uploads/album/cover/1/small_abc--abc.jpg"
        />
      </Link>
      <ul>
        <li
          key="0"
        >
          1. First
        </li>
        <li
          key="1"
        >
          2. Second
        </li>
        <li
          key="2"
        >
          3. Third
        </li>
        <li
          key="3"
        >
          4. Fourth
        </li>
        <li
          key="4"
        >
          5. Fifth
        </li>
        <li
          key="5"
        >
          6. Sixth
        </li>
        <li
          key="6"
        >
          ...
        </li>
      </ul>
    </div>
  </Col>
</div>
`;

exports[`<Albums /> renders Pop albums 1`] = `
<div
  className="Albums"
>
  <PageHeader
    bsClass="page-header"
  >
    Albums 
    <small>
      (
      1
       
      Pop
       
      Album
      )
    </small>
  </PageHeader>
  <div
    className="filters"
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        onClick={[Function]}
      >
        <a>
          All
        </a>
      </li>
      <li
        key="A"
        onClick={[Function]}
      >
        <a>
          A
        </a>
      </li>
      <li
        key="B"
        onClick={[Function]}
      >
        <a>
          B
        </a>
      </li>
      <li
        key="C"
        onClick={[Function]}
      >
        <a>
          C
        </a>
      </li>
      <li
        key="D"
        onClick={[Function]}
      >
        <a>
          D
        </a>
      </li>
      <li
        key="E"
        onClick={[Function]}
      >
        <a>
          E
        </a>
      </li>
      <li
        key="F"
        onClick={[Function]}
      >
        <a>
          F
        </a>
      </li>
      <li
        key="G"
        onClick={[Function]}
      >
        <a>
          G
        </a>
      </li>
      <li
        key="H"
        onClick={[Function]}
      >
        <a>
          H
        </a>
      </li>
      <li
        key="I"
        onClick={[Function]}
      >
        <a>
          I
        </a>
      </li>
      <li
        key="J"
        onClick={[Function]}
      >
        <a>
          J
        </a>
      </li>
      <li
        key="K"
        onClick={[Function]}
      >
        <a>
          K
        </a>
      </li>
      <li
        key="L"
        onClick={[Function]}
      >
        <a>
          L
        </a>
      </li>
      <li
        key="M"
        onClick={[Function]}
      >
        <a>
          M
        </a>
      </li>
      <li
        key="N"
        onClick={[Function]}
      >
        <a>
          N
        </a>
      </li>
      <li
        key="O"
        onClick={[Function]}
      >
        <a>
          O
        </a>
      </li>
      <li
        key="P"
        onClick={[Function]}
      >
        <a>
          P
        </a>
      </li>
      <li
        key="Q"
        onClick={[Function]}
      >
        <a>
          Q
        </a>
      </li>
      <li
        key="R"
        onClick={[Function]}
      >
        <a>
          R
        </a>
      </li>
      <li
        key="S"
        onClick={[Function]}
      >
        <a>
          S
        </a>
      </li>
      <li
        key="T"
        onClick={[Function]}
      >
        <a>
          T
        </a>
      </li>
      <li
        key="U"
        onClick={[Function]}
      >
        <a>
          U
        </a>
      </li>
      <li
        key="V"
        onClick={[Function]}
      >
        <a>
          V
        </a>
      </li>
      <li
        key="W"
        onClick={[Function]}
      >
        <a>
          W
        </a>
      </li>
      <li
        key="X"
        onClick={[Function]}
      >
        <a>
          X
        </a>
      </li>
      <li
        key="Y"
        onClick={[Function]}
      >
        <a>
          Y
        </a>
      </li>
      <li
        key="Z"
        onClick={[Function]}
      >
        <a>
          Z
        </a>
      </li>
    </ul>
  </div>
  <Col
    bsClass="col"
    componentClass="div"
    key="1"
    md={6}
  >
    <div
      className="Album"
    >
      <h2>
        <Link
          replace={false}
          to="/artist/mno_artist/album/mno"
        >
          MNO
        </Link>
      </h2>
      <h3>
        by 
        <Link
          replace={false}
          to="/artist/mno_artist"
        >
          MNO-Artist
        </Link>
         
        <small>
          (
          17
           
          Tracks
          )
        </small>
      </h3>
      <div
        className="icon"
      >
        <a
          onClick={[Function]}
        >
          <FontAwesome
            name="calendar"
          />
           
          2009
        </a>
        <a
          onClick={[Function]}
        >
          <FontAwesome
            className="spacer-left-xs"
            name="tag"
          />
           
          Pop
        </a>
        <FontAwesome
          className="spacer-left-xs"
          name="comment-o"
        />
         
        31
      </div>
      <Link
        replace={false}
        to="/artist/mno_artist/album/mno"
      >
        <img
          alt="MNO"
          className="img-responsive"
          src="http://localhost:3000/uploads/album/cover/1/small_mno--mno.jpg"
        />
      </Link>
      <ul>
        <li
          key="0"
        >
          1. First
        </li>
      </ul>
    </div>
  </Col>
</div>
`;

exports[`<Albums /> renders first page 1`] = `
<div
  className="Albums"
>
  <PageHeader
    bsClass="page-header"
  >
    Albums 
    <small>
      (
      3
       
       
      Albums
      )
    </small>
  </PageHeader>
  <div
    className="filters"
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        onClick={[Function]}
      >
        <a>
          All
        </a>
      </li>
      <li
        key="A"
        onClick={[Function]}
      >
        <a>
          A
        </a>
      </li>
      <li
        key="B"
        onClick={[Function]}
      >
        <a>
          B
        </a>
      </li>
      <li
        key="C"
        onClick={[Function]}
      >
        <a>
          C
        </a>
      </li>
      <li
        key="D"
        onClick={[Function]}
      >
        <a>
          D
        </a>
      </li>
      <li
        key="E"
        onClick={[Function]}
      >
        <a>
          E
        </a>
      </li>
      <li
        key="F"
        onClick={[Function]}
      >
        <a>
          F
        </a>
      </li>
      <li
        key="G"
        onClick={[Function]}
      >
        <a>
          G
        </a>
      </li>
      <li
        key="H"
        onClick={[Function]}
      >
        <a>
          H
        </a>
      </li>
      <li
        key="I"
        onClick={[Function]}
      >
        <a>
          I
        </a>
      </li>
      <li
        key="J"
        onClick={[Function]}
      >
        <a>
          J
        </a>
      </li>
      <li
        key="K"
        onClick={[Function]}
      >
        <a>
          K
        </a>
      </li>
      <li
        key="L"
        onClick={[Function]}
      >
        <a>
          L
        </a>
      </li>
      <li
        key="M"
        onClick={[Function]}
      >
        <a>
          M
        </a>
      </li>
      <li
        key="N"
        onClick={[Function]}
      >
        <a>
          N
        </a>
      </li>
      <li
        key="O"
        onClick={[Function]}
      >
        <a>
          O
        </a>
      </li>
      <li
        key="P"
        onClick={[Function]}
      >
        <a>
          P
        </a>
      </li>
      <li
        key="Q"
        onClick={[Function]}
      >
        <a>
          Q
        </a>
      </li>
      <li
        key="R"
        onClick={[Function]}
      >
        <a>
          R
        </a>
      </li>
      <li
        key="S"
        onClick={[Function]}
      >
        <a>
          S
        </a>
      </li>
      <li
        key="T"
        onClick={[Function]}
      >
        <a>
          T
        </a>
      </li>
      <li
        key="U"
        onClick={[Function]}
      >
        <a>
          U
        </a>
      </li>
      <li
        key="V"
        onClick={[Function]}
      >
        <a>
          V
        </a>
      </li>
      <li
        key="W"
        onClick={[Function]}
      >
        <a>
          W
        </a>
      </li>
      <li
        key="X"
        onClick={[Function]}
      >
        <a>
          X
        </a>
      </li>
      <li
        key="Y"
        onClick={[Function]}
      >
        <a>
          Y
        </a>
      </li>
      <li
        key="Z"
        onClick={[Function]}
      >
        <a>
          Z
        </a>
      </li>
    </ul>
  </div>
  <Col
    bsClass="col"
    componentClass="div"
    key="1"
    md={6}
  >
    <div
      className="Album"
    >
      <h2>
        <Link
          replace={false}
          to="/artist/abc_artist/album/abc"
        >
          ABC
        </Link>
      </h2>
      <h3>
        by 
        <Link
          replace={false}
          to="/artist/abc_artist"
        >
          ABC-Artist
        </Link>
         
        <small>
          (
          15
           
          Tracks
          )
        </small>
      </h3>
      <div
        className="icon"
      >
        <a
          onClick={[Function]}
        >
          <FontAwesome
            name="calendar"
          />
           
          2008
        </a>
        <a
          onClick={[Function]}
        >
          <FontAwesome
            className="spacer-left-xs"
            name="tag"
          />
           
          Rock
        </a>
        <FontAwesome
          className="spacer-left-xs"
          name="comment-o"
        />
         
        42
      </div>
      <Link
        replace={false}
        to="/artist/abc_artist/album/abc"
      >
        <img
          alt="ABC"
          className="img-responsive"
          src="http://localhost:3000/uploads/album/cover/1/small_abc--abc.jpg"
        />
      </Link>
      <ul>
        <li
          key="0"
        >
          1. First
        </li>
        <li
          key="1"
        >
          2. Second
        </li>
        <li
          key="2"
        >
          3. Third
        </li>
        <li
          key="3"
        >
          4. Fourth
        </li>
        <li
          key="4"
        >
          5. Fifth
        </li>
        <li
          key="5"
        >
          6. Sixth
        </li>
        <li
          key="6"
        >
          ...
        </li>
      </ul>
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    key="2"
    md={6}
  >
    <div
      className="Album"
    >
      <h2>
        <Link
          replace={false}
          to="/artist/def_artist/album/def"
        >
          DEF
        </Link>
      </h2>
      <h3>
        by 
        <Link
          replace={false}
          to="/artist/def_artist"
        >
          DEF-Artist
        </Link>
         
        <small>
          (
          27
           
          Tracks
          )
        </small>
      </h3>
      <div
        className="icon"
      >
        <a
          onClick={[Function]}
        >
          <FontAwesome
            name="calendar"
          />
           
          2015
        </a>
        <a
          onClick={[Function]}
        >
          <FontAwesome
            className="spacer-left-xs"
            name="tag"
          />
           
          Classical
        </a>
        <FontAwesome
          className="spacer-left-xs"
          name="comment-o"
        />
         
        44
      </div>
      <Link
        replace={false}
        to="/artist/def_artist/album/def"
      >
        <img
          alt="DEF"
          className="img-responsive"
          src="http://localhost:3000/uploads/album/cover/978/small_def--def.jpg"
        />
      </Link>
      <ul>
        <li
          key="0"
        >
          1. One
        </li>
        <li
          key="1"
        >
          2. Two
        </li>
      </ul>
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={8}
  >
    <Paginator
      onPageChange={[Function]}
      pagination={
        Object {
          "current_page": 1,
          "next_page": 2,
          "prev_page": null,
          "total_count": 3,
          "total_pages": 2,
        }
      }
    />
  </Col>
</div>
`;

exports[`<Albums /> renders second page 1`] = `
<div
  className="Albums"
>
  <PageHeader
    bsClass="page-header"
  >
    Albums 
    <small>
      (
      3
       
       
      Albums
      )
    </small>
  </PageHeader>
  <div
    className="filters"
  >
    <ul
      className="pagination pagination-sm"
    >
      <li
        onClick={[Function]}
      >
        <a>
          All
        </a>
      </li>
      <li
        key="A"
        onClick={[Function]}
      >
        <a>
          A
        </a>
      </li>
      <li
        key="B"
        onClick={[Function]}
      >
        <a>
          B
        </a>
      </li>
      <li
        key="C"
        onClick={[Function]}
      >
        <a>
          C
        </a>
      </li>
      <li
        key="D"
        onClick={[Function]}
      >
        <a>
          D
        </a>
      </li>
      <li
        key="E"
        onClick={[Function]}
      >
        <a>
          E
        </a>
      </li>
      <li
        key="F"
        onClick={[Function]}
      >
        <a>
          F
        </a>
      </li>
      <li
        key="G"
        onClick={[Function]}
      >
        <a>
          G
        </a>
      </li>
      <li
        key="H"
        onClick={[Function]}
      >
        <a>
          H
        </a>
      </li>
      <li
        key="I"
        onClick={[Function]}
      >
        <a>
          I
        </a>
      </li>
      <li
        key="J"
        onClick={[Function]}
      >
        <a>
          J
        </a>
      </li>
      <li
        key="K"
        onClick={[Function]}
      >
        <a>
          K
        </a>
      </li>
      <li
        key="L"
        onClick={[Function]}
      >
        <a>
          L
        </a>
      </li>
      <li
        key="M"
        onClick={[Function]}
      >
        <a>
          M
        </a>
      </li>
      <li
        key="N"
        onClick={[Function]}
      >
        <a>
          N
        </a>
      </li>
      <li
        key="O"
        onClick={[Function]}
      >
        <a>
          O
        </a>
      </li>
      <li
        key="P"
        onClick={[Function]}
      >
        <a>
          P
        </a>
      </li>
      <li
        key="Q"
        onClick={[Function]}
      >
        <a>
          Q
        </a>
      </li>
      <li
        key="R"
        onClick={[Function]}
      >
        <a>
          R
        </a>
      </li>
      <li
        key="S"
        onClick={[Function]}
      >
        <a>
          S
        </a>
      </li>
      <li
        key="T"
        onClick={[Function]}
      >
        <a>
          T
        </a>
      </li>
      <li
        key="U"
        onClick={[Function]}
      >
        <a>
          U
        </a>
      </li>
      <li
        key="V"
        onClick={[Function]}
      >
        <a>
          V
        </a>
      </li>
      <li
        key="W"
        onClick={[Function]}
      >
        <a>
          W
        </a>
      </li>
      <li
        key="X"
        onClick={[Function]}
      >
        <a>
          X
        </a>
      </li>
      <li
        key="Y"
        onClick={[Function]}
      >
        <a>
          Y
        </a>
      </li>
      <li
        key="Z"
        onClick={[Function]}
      >
        <a>
          Z
        </a>
      </li>
    </ul>
  </div>
  <Col
    bsClass="col"
    componentClass="div"
    key="1"
    md={6}
  >
    <div
      className="Album"
    >
      <h2>
        <Link
          replace={false}
          to="/artist/ghi_artist/album/ghi"
        >
          GHI
        </Link>
      </h2>
      <h3>
        by 
        <Link
          replace={false}
          to="/artist/ghi_artist"
        >
          GHI-Artist
        </Link>
         
        <small>
          (
          15
           
          Tracks
          )
        </small>
      </h3>
      <div
        className="icon"
      >
        <a
          onClick={[Function]}
        >
          <FontAwesome
            name="calendar"
          />
           
          2003
        </a>
        <a
          onClick={[Function]}
        >
          <FontAwesome
            className="spacer-left-xs"
            name="tag"
          />
           
          Rock
        </a>
        <FontAwesome
          className="spacer-left-xs"
          name="comment-o"
        />
         
        42
      </div>
      <Link
        replace={false}
        to="/artist/ghi_artist/album/ghi"
      >
        <img
          alt="GHI"
          className="img-responsive"
          src="http://localhost:3000/uploads/album/cover/1/small_ghi--ghi.jpg"
        />
      </Link>
      <ul>
        <li
          key="0"
        >
          1. First
        </li>
        <li
          key="1"
        >
          2. Second
        </li>
        <li
          key="2"
        >
          3. Third
        </li>
      </ul>
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={8}
  >
    <Paginator
      onPageChange={[Function]}
      pagination={
        Object {
          "current_page": 1,
          "next_page": 2,
          "prev_page": null,
          "total_count": 3,
          "total_pages": 2,
        }
      }
    />
  </Col>
</div>
`;
